fix(RadioGroup): unexpected wrapped text in picker appearance

--- a/src/RadioGroup/styles/index.less
+++ b/src/RadioGroup/styles/index.less
@@ -49,6 +49,7 @@
 
   .rs-radio-checker > label {
     display: inline-block;
+    white-space: nowrap;
     font-size: @font-size-base;
     line-height: @line-height-base;
     border-radius: 0;
